--- a/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
+++ b/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
@@ -1,29 +1,48 @@
-<p-dataTable [value]="lancamentos" [responsive]="true" emptyMessage="Nenhum lançamento encontrado"
+<p-table [value]="lancamentos" [responsive]="true" emptyMessage="Nenhum lançamento encontrado"
     [paginator]="true" [rows]="linhas" [lazy]="true" [totalRecords]="totalRegistros"
-    (onLazyLoad)="aoMudarPagina($event)" [pageLinks]="3" #tabela>
-  <p-column field="pessoa" header="Pessoa" styleClass="" sortable="true"></p-column>
-  <p-column field="descricao" header="Descrição" styleClass="" sortable="true"></p-column>
-  <p-column field="dataVencimento" header="Vencimento" styleClass="col-data" sortable="true">
-    <ng-template let-lanc="rowData" pTemplate="body">
-      {{lanc.dataVencimento | date:'dd/MM/y'}}
-    </ng-template>
-  </p-column>
-  <p-column field="dataPagamento" header="Pagamento" styleClass="col-data">
-    <ng-template let-lanc="rowData" pTemplate="body">
-        {{lanc.dataPagamento | date:'dd/MM/y'}}
-      </ng-template>
-    </p-column>
-  <p-column field="valor" header="Valor" styleClass="col-valor">
-    <ng-template let-lanc="rowData" pTemplate="body">
-      <span [style.color]="lanc.tipo==='RECEITA'?'green':'red'">{{lanc.valor | number:'1.2-2'}}</span>
-    </ng-template>
-  </p-column>
-  <p-column styleClass="col-acoes">
-    <ng-template let-lanc="rowData" pTemplate="body">
-      <a pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"
-        [routerLink]="['/lancamentos', lanc.codigo]"></a>
-      <button pButton icon="fa-trash" (click)="aoExcluir(lanc)"
-        pTooltip="Excluir" tooltipPosition="top" [disabled]="!util.podeExcluirLancamento()"></button>
-    </ng-template>
-  </p-column>
-</p-dataTable>
+    (onLazyLoad)="aoMudarPagina($event)" [pageLinks]="3" #tabela
+    sortField="dataVencimento" [sortOrder]="-1">
+  <ng-template pTemplate="header">
+    <tr>
+      <th pSortableColumn="pessoa">
+        Pessoa
+        <p-sortIcon field="pessoa"></p-sortIcon>
+      </th>
+      <th pSortableColumn="descricao">
+        Descrição
+        <p-sortIcon field="descricao"></p-sortIcon>
+      </th>
+      <th class="col-data-sort" pSortableColumn="dataVencimento">
+        Vencimento
+        <p-sortIcon field="dataVencimento"></p-sortIcon>
+      </th>
+      <th class="col-data">Pagamento</th>
+      <th class="col-valor-header">Valor</th>
+      <th class="col-acoes"></th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-lanc>
+    <tr>
+      <td>{{ lanc.pessoa }}</td>
+      <td>{{ lanc.descricao }}</td>
+      <td class="col-data">{{lanc.dataVencimento | date:'dd/MM/y'}}</td>
+      <td class="col-data">{{lanc.dataPagamento | date:'dd/MM/y'}}</td>
+      <td class="col-valor" [style.color]="lanc.tipo==='RECEITA'?'green':'red'">
+        {{lanc.valor | number:'1.2-2'}}
+      </td>
+      <td class="col-acoes">
+        <button pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"
+          [routerLink]="['/lancamentos', lanc.codigo]">
+        </button>
+        <button pButton icon="fa-trash" (click)="aoExcluir(lanc)"
+          pTooltip="Excluir" tooltipPosition="top" [disabled]="!util.podeExcluirLancamento()">
+        </button>
+      </td>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="emptymessage">
+    <tr>
+      <td>Nenhum lançamento encontrado</td>
+    </tr>
+  </ng-template>
+</p-table>
